# Wall

./: .gitignore  .pre-commit-config.yaml  mypy.ini  pyproject.toml  ruff.toml
app/logic/domains/: __init__.py  user.py  wall.py
app/logic/usecases/: get_wall.py
